--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <article>
         <h1>We&rsquo;ll be back soon!</h1>
         <div>
-            <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="mailto:dazeroainvestitore@gmail.com">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
-            <p>&mdash; The Team</p>
+            <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="mailto:thunder.sh@proton.me">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
+            <p>&mdash; The Thunder SH Team.</p>
         </div>
     </article>
   </body>
